--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -307,6 +307,11 @@
     -fx-background-color: #2B2D30;
 }
 
+.logs-center {
+    -fx-border-width: 0 4 0 4;
+    -fx-border-color: #2B2D30;
+}
+
 .project-logs-dropdown {
     -fx-border-color: #3574F0;
     -fx-border-radius: 4;
@@ -408,6 +413,10 @@
     -fx-background-color: transparent;
 }
 
+.scroll-pane .scroll-bar .increment-button:hover,
+.scroll-pane .scroll-bar .decrement-button:hover {
+    -fx-background-color: transparent;
+}
 
 /** {*/
 /*    -fx-border-width: 1px;*/
