--- a/src/main/resources/components/settingsDropdown.fxml
+++ b/src/main/resources/components/settingsDropdown.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.layout.VBox?>
 <VBox id="settingsDropdown" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsDropdownController" stylesheets="@/css/styles.css">
-    <Label maxWidth="Infinity" text="Settings..." textAlignment="JUSTIFY"/>
-    <Label maxWidth="Infinity" onMouseClicked="#rescan" text="Run scanning" textAlignment="JUSTIFY"/>
-    <Label maxWidth="Infinity" text="Plugins" textAlignment="JUSTIFY"/>
+    <Label maxWidth="Infinity" textAlignment="JUSTIFY" fx:id="settingsLabel"/>
+    <Label maxWidth="Infinity" onMouseClicked="#rescan" fx:id="scanLabel" textAlignment="JUSTIFY"/>
+    <Label maxWidth="Infinity" fx:id="pluginsLabel" textAlignment="JUSTIFY"/>
+    <Label maxWidth="Infinity" onMouseClicked="#changeLanguage" text="Change Language" textAlignment="JUSTIFY"/>
 </VBox>
