--- a/src/main/resources/components/projectSettingDropdown.fxml
+++ b/src/main/resources/components/projectSettingDropdown.fxml
@@ -17,10 +17,16 @@
         </graphic>
         Open directory
     </Label>
-    <Label fx:id="excludeProjectButton" onMouseClicked="#excludeProject" textAlignment="JUSTIFY">
+    <Label fx:id="excludeProjectButton" onMouseClicked="#excludeProject" textAlignment="JUSTIFY" visible="false">
         <graphic>
             <fx:include source="/icons/fxml/exclude.fxml"/>
         </graphic>
         Exclude project
+    </Label>
+    <Label fx:id="deleteProjectButton" onMouseClicked="#deleteProject" textAlignment="JUSTIFY" visible="false">
+        <graphic>
+            <fx:include source="/icons/fxml/removeBin.fxml"/>
+        </graphic>
+        Delete project
     </Label>
 </VBox>
