--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -12,7 +12,7 @@
         <padding>
             <Insets top="12" bottom="12" right="16" left="16"/>
         </padding>
-        <Label fx:id="runningProjects" text="You have 0 running projects" styleClass="running-projects-label" textOverrun="CENTER_ELLIPSIS"/>
+        <Label fx:id="runningProjects" styleClass="running-projects-label" textOverrun="CENTER_ELLIPSIS"/>
         <Region HBox.hgrow="ALWAYS"/>
         <HBox fx:id="projectLogsDropdown" spacing="10" styleClass="project-logs-dropdown" onMouseClicked="#showRunningProjects">
             <padding>
@@ -26,7 +26,7 @@
 
     <HBox fx:id="placeForScrollPane" VBox.vgrow="ALWAYS" styleClass="logs-center">
         <StackPane HBox.hgrow="ALWAYS">
-            <Label text="Choose a project first"/>
+            <Label fx:id="chooseProjectFirst"/>
         </StackPane>
     </HBox>
 
@@ -35,8 +35,8 @@
             <Insets top="12" bottom="12" right="16" left="16"/>
         </padding>
         <HBox styleClass="logs-button-container">
-            <Label fx:id="logsButton" text="Logs" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
-            <Label fx:id="metricsButton" text="Metrics" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
+            <Label fx:id="logsButton" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
+            <Label fx:id="metricsButton" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
         </HBox>
     </HBox>
 </VBox>
