Localization using fxml only

--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -12,13 +12,13 @@
         <padding>
             <Insets top="12" bottom="12" right="16" left="16"/>
         </padding>
-        <Label fx:id="runningProjects" styleClass="running-projects-label" textOverrun="CENTER_ELLIPSIS"/>
+        <Label userData="localization:running_projects_count" fx:id="runningProjects" styleClass="running-projects-label" textOverrun="CENTER_ELLIPSIS"/>
         <Region HBox.hgrow="ALWAYS"/>
         <HBox fx:id="projectLogsDropdown" spacing="10" styleClass="project-logs-dropdown" onMouseClicked="#showRunningProjects">
             <padding>
                 <Insets top="4" bottom="4" left="8" right="8"/>
             </padding>
-            <Label fx:id="chosenProject"/>
+            <Label userData="localization:empty_chosen_project" fx:id="chosenProject"/>
             <Region HBox.hgrow="ALWAYS"/>
             <fx:include fx:id="foldButton" source="/icons/fxml/unfold_button.fxml"/>
         </HBox>
@@ -26,7 +26,7 @@
 
     <HBox fx:id="placeForScrollPane" VBox.vgrow="ALWAYS" styleClass="logs-center">
         <StackPane HBox.hgrow="ALWAYS">
-            <Label fx:id="chooseProjectFirst"/>
+            <Label userData="localization:choose_project_first" fx:id="chooseProjectFirst"/>
         </StackPane>
     </HBox>
 
@@ -35,8 +35,8 @@
             <Insets top="12" bottom="12" right="16" left="16"/>
         </padding>
         <HBox styleClass="logs-button-container">
-            <Label fx:id="logsButton" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
-            <Label fx:id="metricsButton" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
+            <Label userData="localization:logs_button" fx:id="logsButton" styleClass="logs-button-selected" onMouseClicked="#switchLogsButtonStyle"/>
+            <Label userData="localization:metrics_button" fx:id="metricsButton" styleClass="logs-button" onMouseClicked="#switchLogsButtonStyle"/>
         </HBox>
     </HBox>
 </VBox>
