--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -18,7 +18,7 @@
             <padding>
                 <Insets top="4" bottom="4" left="8" right="8"/>
             </padding>
-            <Label userData="localization:empty_chosen_project" fx:id="chosenProject"/>
+            <Label fx:id="chosenProject"/>
             <Region HBox.hgrow="ALWAYS"/>
             <fx:include fx:id="foldButton" source="/icons/fxml/unfold_button.fxml"/>
         </HBox>
@@ -26,7 +26,7 @@
 
     <HBox fx:id="placeForScrollPane" VBox.vgrow="ALWAYS" styleClass="logs-center">
         <StackPane HBox.hgrow="ALWAYS">
-            <Label userData="localization:choose_project_first" fx:id="chooseProjectFirst"/>
+            <Label userData="localization:choose_project_first"/>
         </StackPane>
     </HBox>
 
