Fixed missing "choose a project first panel". Settings window initial commit.

--- a/src/main/resources/components/logsAndMetricsPanel.fxml
+++ b/src/main/resources/components/logsAndMetricsPanel.fxml
@@ -26,7 +26,7 @@
 
     <HBox fx:id="placeForScrollPane" VBox.vgrow="ALWAYS" styleClass="logs-center">
         <StackPane HBox.hgrow="ALWAYS">
-            <Label userData="localization:choose_project_first"/>
+            <Label fx:id="chooseProjectFirst" userData="localization:choose_project_first"/>
         </StackPane>
     </HBox>
 
