--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -34,6 +34,16 @@
     -fx-background-radius: 16px 0 0 0;
 }
 
+#settingsGradientBox {
+    -fx-background-color: linear-gradient(from 0% 0% to 100% 0%,
+    transparent 0%,
+    #1D4744 16.5%,
+    transparent 33.0%,
+    transparent 100%);
+    -fx-pref-height: 40px;
+    -fx-background-radius: 16px 0 0 0;
+}
+
 .circle-close {
     -fx-fill: #FF3B30;
     -fx-scale-x: 1.2;
@@ -96,6 +106,11 @@
 }
 
 #mainScreen {
+    -fx-background-radius: 16px;
+    -fx-background-color: #1E1F22;
+}
+
+#settingsScreen {
     -fx-background-radius: 16px;
     -fx-background-color: #1E1F22;
 }
