Setup settings window skeleton

--- a/src/main/resources/components/settingsHeader.fxml
+++ b/src/main/resources/components/settingsHeader.fxml
@@ -4,9 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Circle?>
 <!--suppress JavaFxEventHandler -->
-<AnchorPane fx:id="header" onMouseClicked="#handleHeaderMaximize" stylesheets="@/css/styles.css"
+<AnchorPane fx:id="settingsHeader" onMouseClicked="#handleHeaderMaximize" stylesheets="@/css/styles.css"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsHeaderController">
+            fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsHeaderController"
+            styleClass="settings-header">
 
     <StackPane AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"
                AnchorPane.leftAnchor="0.0">
