--- a/src/main/resources/components/settingsList.fxml
+++ b/src/main/resources/components/settingsList.fxml
@@ -1,23 +1,33 @@
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Label?>
-<SplitPane dividerPositions="0.25"
-           xmlns="http://javafx.com/javafx" stylesheets="@/css/styles.css">
+<?import javafx.geometry.Insets?>
+<SplitPane dividerPositions="0.25" fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsListController"
+           xmlns:fx="http://javafx.com/fxml" stylesheets="@/css/styles.css" styleClass="settings-split-pane" onMouseEntered="#handleMouseEntered">
 
-    <VBox spacing="32" style="-fx-padding: 24;">
-        <Label text="Root path to scan" />
-        <Label text="Excluded dirs" />
-        <Label text="Maximum depth" />
-        <Label text="Rescan Every Hours" />
+    <padding>
+        <Insets left="8" right="8"/>
+    </padding>
+
+    <VBox spacing="32">
+        <padding>
+            <Insets right="16" top="32" bottom="32"/>
+        </padding>
+        <Label fx:id="rootPath" userData="localization:setting_root_path_to_scan"/>
+        <Label fx:id="excludedDirs" userData="localization:setting_excluded_dirs"/>
+        <Label fx:id="maxScanDepth" userData="localization:setting_max_scan_depth"/>
+        <Label fx:id="rescanEveryHours" userData="localization:setting_rescan_every_hours"/>
+        <Label fx:id="language" userData="localization:setting_language"/>
     </VBox>
 
-    <VBox spacing="28" style="-fx-padding: 24;">
+    <VBox spacing="28">
+        <padding>
+            <Insets left="32" top="32" bottom="32"/>
+        </padding>
         <TextField promptText="Enter path" />
         <TextField promptText="Enter patterns" />
         <Spinner />
         <Spinner />
+        <Label/>
     </VBox>
 
 </SplitPane>
