--- a/src/main/resources/components/settingsList.fxml
+++ b/src/main/resources/components/settingsList.fxml
@@ -23,22 +23,26 @@
 
         <Label fx:id="rootPath" userData="localization:setting_root_path_to_scan"
                GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <TextField fx:id="rootPathSetting" promptText="Enter path" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+        <VBox GridPane.rowIndex="0" GridPane.columnIndex="1">
+            <TextField fx:id="rootPathSetting"/>
+            <Label fx:id="rootPathErrorMessage" visible="false" managed="false"
+                   userData="localization:setting_root_path_to_scan_error_message" styleClass="error"/>
+        </VBox>
 
         <Label fx:id="excludedDirs" userData="localization:setting_excluded_dirs"
                GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <TextField fx:id="excludedDirsSetting" promptText="Enter patterns" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+        <TextField fx:id="excludedDirsSetting" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
         <Label fx:id="maxScanDepth" userData="localization:setting_max_scan_depth"
                GridPane.rowIndex="2" GridPane.columnIndex="0"/>
         <Spinner fx:id="maxScanDepthSetting" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
         <Label fx:id="rescanEveryHours" userData="localization:setting_rescan_every_hours"
-        GridPane.rowIndex="3" GridPane.columnIndex="0"/>
+               GridPane.rowIndex="3" GridPane.columnIndex="0"/>
         <Spinner fx:id="rescanEveryHoursSetting" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
         <Label fx:id="language" userData="localization:setting_language" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-        <ComboBox fx:id="supportedTranslationsSetting" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+        <ComboBox fx:id="languageSetting" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
     </GridPane>
 
 </SplitPane>
