--- a/src/main/resources/components/settingsScreen.fxml
+++ b/src/main/resources/components/settingsScreen.fxml
@@ -5,7 +5,7 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.nevertouchgrass.prolific.javafxcontroller.SettingsScreenController"
             stylesheets="@/css/styles.css"
-            fx:id="settingsScreen">
+            fx:id="settingsScreen" styleClass="settingsScreen">
     <top>
         <fx:include fx:id="settingsHeader" source="/components/settingsHeader.fxml" AnchorPane.topAnchor="0"
                     AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0"/>
