--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -10,7 +10,7 @@
     -fx-background-radius: 16px 16px 0 0;
 }
 
-#settingsScreen {
+.settingsScreen {
     -fx-background-radius: 16px;
     -fx-background-color: #2B2D30;
     -fx-border-width: 0.5;
@@ -91,6 +91,10 @@
     -fx-padding: 0;
 }
 
+.configs-screen {
+    -fx-background-color: #1E1F22;
+}
+
 #footer {
     -fx-background-color: #2B2D30;
     -fx-font-size: 1.25em;
@@ -115,7 +119,7 @@
     -fx-background-radius: 16px 0 0 0;
 }
 
-#settingsGradientBox {
+.settingsGradientBox {
     -fx-background-color: linear-gradient(from 0% 0% to 100% 0%,
     transparent 0%,
     #1D4744 16.5%,
